--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -531,3 +531,18 @@ skill_huiyizhongxian: 'https://seer2-resource.yuuinih.com/sound/skill/07_1_003.m
 skill_fenshenshu: 'https://seer2-resource.yuuinih.com/sound/skill/07_3_002.mp3'
 skill_tiankongliechong: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
 skill_tiankongzhiwu: 'https://seer2-resource.yuuinih.com/sound/skill/07_2_001.mp3'
+# 虫系技能音效
+skill_fushihuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
+skill_xuruohuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
+skill_dufentuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_002.mp3'
+skill_dufenchongji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_003.mp3'
+skill_yingguanghuafen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
+skill_mabidufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_001.mp3'
+skill_shuimiandufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
+skill_huandielianji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_1_003.mp3'
+skill_huafenmiman: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_3_002.mp3'
+skill_huanmiediewu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/11130.mp3'
+skill_fushidufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_003.mp3'
+skill_xuruodufeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_001.mp3'
+skill_huandiedusha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_2_002.mp3'
+skill_huandiemiwu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/06_3_003.mp3'
