--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -829,3 +829,14 @@
     stack: 25
   condition:
     type: selfSwitchIn
+
+# 荧光: 使添加命中下降的效果额外增加5
+- id: effect_emblem_yingguanghuafen_extra_accuracy_reduction_5
+  trigger: OnBattleStart
+  priority: 0
+  apply:
+    type: addTaggedConfigModifier
+    target: self
+    tag: skill_effect_mingzhongxiajiang_stack
+    modifierType: delta
+    value: 5
