--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -137,6 +137,17 @@
     <<: *apply_self_statstage_+1_template
     statType: atk
   condition: *condition_probability_5_percent_template
+- id: effect_skill_raise_atk_1_stage_10_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_self_statstage_+1_template
+    statType: atk
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_10_percent_template
 - id: effect_skill_raise_atk_1_stage_15_percent
   trigger: BeforeHit
   priority: 0
@@ -825,7 +836,10 @@
     mark:
       type: entity:baseMark
       value: mark_mingzhongxiajiang
-    stack: 15
+    stack:
+      type: raw:number
+      value: 15
+      tags: ['skill_effect_stack', 'skill_effect_mingzhongxiajiang_stack']
   condition: *condition_self_use_skill_template
 - id: effect_skill_foe_clear_stage
   trigger: OnHit
@@ -3804,7 +3818,10 @@
     mark:
       type: entity:baseMark
       value: mark_mingzhongxiajiang
-    stack: 5
+    stack:
+      type: raw:number
+      value: 5
+      tags: ['skill_effect_stack', 'skill_effect_mingzhongxiajiang_stack']
   condition:
     type: selfUseSkill
 - id: effect_skill_add_mark_foe_xuehongyinji
@@ -6383,7 +6400,10 @@
     mark:
       type: entity:baseMark
       value: mark_mingzhongxiajiang
-    stack: 25
+    stack:
+      type: raw:number
+      value: 25
+      tags: ['skill_effect_stack', 'skill_effect_mingzhongxiajiang_stack']
   condition:
     type: selfUseSkill
 #  沙鹤之力每剩余1回合增加25%命中率
@@ -7358,3 +7378,196 @@
     type: every
     conditions:
       - type: selfUseSkill
+# 附加1/8最大体力的伤害
+- id: effect_skill_fixed_damage_max_hp_1_8
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  apply:
+    type: addModified
+    target: damageContext
+    percent: 0
+    delta:
+      type: dynamic
+      selector:
+        base: foe
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+          - type: divide
+            arg: 8
+  condition:
+    type: selfUseSkill
+# 连续使用2次弱化对手特防1级
+- id: effect_skill_reduce_foe_spd_1_stage_consecutive_2_times
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    <<: *apply_foe_statstage_-1_template
+    statType: spd
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: continuousUseSkill
+        times: 2
+        strategy: Periodic
+# 15%使对手麻痹 失败时50%强化自身特攻1级
+- id: effect_skill_add_mark_foe_mabi_15_percent_or_raise_self_spa_1_stage_50_percent
+  trigger: OnHit
+  priority: 0
+  condition:
+    type: selfUseSkill
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      target: foe
+      evaluator:
+        type: probability
+        percent:
+          type: 'raw:number'
+          value: 15
+          tags: ['skill_effect_probability']
+    trueOperator:
+      type: addMark
+      target: foe
+      mark:
+        type: entity:baseMark
+        value: mark_mabi
+    falseOperator:
+      type: conditional
+      condition:
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 50
+            tags: ['skill_effect_probability']
+      trueOperator: # If the 50% chance succeeds
+        <<: *apply_self_statstage_+1_template
+        statType: spa
+# 15%使对手睡眠 失败时50%强化自身速度1级
+- id: effect_skill_add_mark_foe_shuimian_15_percent_or_raise_self_spe_1_stage_50_percent
+  trigger: OnHit #BeforeHit睡眠之后直接就被打醒了
+  priority: 0
+  condition:
+    type: selfUseSkill
+  apply:
+    type: conditional
+    condition:
+      type: evaluate
+      target: foe
+      evaluator:
+        type: probability
+        percent:
+          type: 'raw:number'
+          value: 15
+          tags: ['skill_effect_probability']
+    trueOperator:
+      type: addMark
+      target: foe
+      mark:
+        type: entity:baseMark
+        value: mark_shuimian
+    falseOperator:
+      type: conditional
+      condition:
+        type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent:
+            type: 'raw:number'
+            value: 50
+            tags: ['skill_effect_probability']
+      trueOperator:
+        <<: *apply_self_statstage_+1_template
+        statType: spe
+# 使自己获得花粉弥漫
+- id: effect_skill_add_mark_huafenmiman_1
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: self
+    mark:
+      type: entity:baseMark
+      value: mark_huafenmiman
+    stack: 1
+  condition:
+    type: selfUseSkill
+# 10%使对手睡眠
+- id: effect_skill_add_mark_foe_shuimian_10_percent
+  trigger: BeforeHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_shuimian
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - *condition_probability_10_percent_template
+# 连续使用两次使对手中毒
+- id: effect_skill_add_mark_foe_zhongdu_consecutive_2_times
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_zhongdu
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: continuousUseSkill
+        times: 2
+        strategy: Periodic
+# 对手睡眠或麻痹时候威力2倍
+- id: effect_skill_power_2x_if_foe_shuimian_or_mabi
+  trigger: AfterUseSkillCheck
+  priority: 0
+  apply:
+    type: amplifyPower
+    target: usingSkillContext
+    value: 2
+  condition:
+    type: every
+    conditions:
+      - type: selfUseSkill
+      - type: evaluate
+        target:
+          base: foeMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: baseId
+              evaluator:
+                type: anyOf
+                value:
+                  - mark_shuimian
+                  - mark_mabi
+        evaluator:
+          type: exist
+# 使对手睡眠
+- id: effect_skill_add_mark_foe_shuimian
+  trigger: OnHit
+  priority: 0
+  apply:
+    type: addMark
+    target: foe
+    mark:
+      type: entity:baseMark
+      value: mark_shuimian
+  condition:
+    type: selfUseSkill
