--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -198,5 +198,10 @@
   config: *ability_config
   tags: [ability]
   effect:
-    - effect_ability_spa_skill_add_dadizhi_1_hit_or_miss # TODO: 特攻无视Miss使自身获得1层大地之佑
-    - effect_ability_atk_skill_add_shabaozhi_1_hit_or_miss # TODO: 物攻无视Miss使自身获得1层沙暴之力
+    - effect_ability_spa_skill_add_dadizhi_1_hit_or_miss
+    - effect_ability_atk_skill_add_shabaozhi_1_hit_or_miss
+- id: mark_ability_dufen
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_huafenmiman_damage_foe_25_per_turn
