--- a/data/species.yaml
+++ b/data/species.yaml
@@ -4709,3 +4709,121 @@
     - mark_ability_liandong
   emblem:
     - mark_emblem_lianfang
+# 虫系精灵 - 荧光蝶系列
+- id: pet_yingguangdie
+  num: 200
+  element: Bug
+  baseStats:
+    hp: 86
+    atk: 113
+    spa: 126
+    def: 118
+    spd: 121
+    spe: 109
+  genderRatio:
+    - 7
+    - 3
+  heightRange:
+    - 19
+    - 24
+  weightRange:
+    - 11
+    - 16
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_fushihuafen
+      level: 11
+      hidden: false
+    - skill_id: skill_xuruohuafen
+      level: 16
+      hidden: false
+    - skill_id: skill_dufentuxi
+      level: 22
+      hidden: false
+    - skill_id: skill_dufenchongji
+      level: 27
+      hidden: false
+  ability:
+    - mark_ability_dufen
+  emblem:
+    - mark_emblem_yingguang
+- id: pet_huancaidie
+  num: 201
+  element: Bug
+  baseStats:
+    hp: 176
+    atk: 158
+    spa: 176
+    def: 163
+    spd: 166
+    spe: 159
+  genderRatio:
+    - 7
+    - 3
+  heightRange:
+    - 45
+    - 50
+  weightRange:
+    - 32
+    - 37
+  learnable_skills:
+    - skill_id: skill_chongzhuang
+      level: 1
+      hidden: false
+    - skill_id: skill_fuchong
+      level: 5
+      hidden: false
+    - skill_id: skill_fushihuafen
+      level: 11
+      hidden: false
+    - skill_id: skill_xuruohuafen
+      level: 16
+      hidden: false
+    - skill_id: skill_dufentuxi
+      level: 22
+      hidden: false
+    - skill_id: skill_dufenchongji
+      level: 27
+      hidden: false
+    - skill_id: skill_yingguanghuafen
+      level: 32
+      hidden: false
+    - skill_id: skill_mabidufeng
+      level: 37
+      hidden: false
+    - skill_id: skill_shuimiandufeng
+      level: 42
+      hidden: false
+    - skill_id: skill_huandielianji
+      level: 47
+      hidden: false
+    - skill_id: skill_xuruo
+      level: 52
+      hidden: false
+    - skill_id: skill_huafenmiman
+      level: 56
+      hidden: false
+    - skill_id: skill_huanmiediewu
+      level: 60
+      hidden: true
+    - skill_id: skill_fushidufeng
+      level: 60
+      hidden: true
+    - skill_id: skill_xuruodufeng
+      level: 60
+      hidden: true
+    - skill_id: skill_huandiedusha
+      level: 60
+      hidden: true
+    - skill_id: skill_huandiemiwu
+      level: 60
+      hidden: true
+  ability:
+    - mark_ability_dufen
+  emblem:
+    - mark_emblem_yingguang
